deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: rigup-frontend
  namespace: mariefm  #ganti namespace masing2
spec:
  type: LoadBalancer
  selector:
    app: rigup
    tier: frontend
  ports:
  - port: 3000
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mariefm #ganti namespace masing2
spec:
  selector:
    app: rigup
    tier: backend
  ports:
  - port: 2000
    targetPort: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: mariefm #ganti namespace masing2
spec:
  selector:
    app: rigup
    tier: db
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rigup
    tier: frontend
  name: rigup-frontend-deployment
  namespace: mariefm  #ganti namespace masing2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rigup
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rigup
        tier: frontend
    spec:
      containers:
      - image: muhammadariefmaulana/rigup_frontend:latest
        imagePullPolicy: IfNotPresent
        name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rigup
    tier: backend
  name: rigup-backend-deployment
  namespace: mariefm  #ganti namespace masing2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rigup
      tier: backend
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rigup
        tier: backend
    spec:
      containers:
      - image: muhammadariefmaulana/rigup_backend:latest
        imagePullPolicy: IfNotPresent
        name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rigup
    tier: db
  name: rigup-db-deployment
  namespace: mariefm  #ganti namespace masing2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rigup
      tier: db
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rigup
        tier: db
    spec:
      containers:
      - image: muhammadariefmaulana/rigup_database:latest
        imagePullPolicy: IfNotPresent
        name: database
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-mariefm-ingress
  namespace: mariefm
  labels:
    name: frontend-mariefm-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
      - devops7.telkomsel.com
    secretName: ingress-cert
  rules:
  - host: devops7.telkomsel.com
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 3000
        path: /
        pathType: Prefix
---
